After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748617 - qtdemux: fix buffer leak on EOS with stop position in push mode
qtdemux: fix buffer leak on EOS with stop position in push mode
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-29 08:05 UTC by Guillaume Desmottes
Modified: 2015-04-30 12:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: fix buffer leak (1016 bytes, patch)
2015-04-29 08:07 UTC, Guillaume Desmottes
none Details | Review
qtdemux: fix buffer leak on eos in push mode (2.51 KB, patch)
2015-04-30 11:16 UTC, Tim-Philipp Müller
committed Details | Review

Description Guillaume Desmottes 2015-04-29 08:05:56 UTC
.
Comment 1 Guillaume Desmottes 2015-04-29 08:07:17 UTC
Created attachment 302545 [details] [review]
qtdemux: fix buffer leak

The buffer was only consumed in the 'else' branch (by calling
gst_qtdemux_decorate_and_push_buffer()).
Comment 2 Tim-Philipp Müller 2015-04-30 11:16:21 UTC
Created attachment 302639 [details] [review]
qtdemux: fix buffer leak on eos in push mode

Your fix seems correct, but I think something like this would be better. Could you test it?
Comment 3 Guillaume Desmottes 2015-04-30 12:18:44 UTC
Yep your patch seems to fix the leak as well. For the record it can be reproduced using the validate.http.playback.seek_with_stop.raw_h264_1_mp4 scenario.
Comment 4 Tim-Philipp Müller 2015-04-30 12:37:57 UTC
Thanks, I'll push that then, hope you don't mind :)

commit 377c8405aaf66fa4055f1a387a21c9e1ea502838
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Thu Apr 30 12:13:59 2015 +0100

    qtdemux: fix buffer leak on eos in push mode
    
    Based on patch by Guillaume Desmottes.
    
    scenario: validate.http.playback.seek_with_stop.raw_h264_1_mp4
    
    https://bugzilla.gnome.org/show_bug.cgi?id=748617